--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@react-native-async-storage/async-storage": "^1.16.1",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.5.0",
+    "moment": "^2.29.1",
+    "moment-locales-webpack-plugin": "^1.2.0",
     "react": "17.0.2",
     "react-native": "0.67.2",
     "react-native-bouncy-checkbox": "^2.1.10",
