--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native": "0.67.2",
     "react-native-bouncy-checkbox": "^2.1.10",
     "react-native-dropdown-picker": "^5.3.0",
+    "react-native-mask-input": "^1.1.1",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.11.1",
     "react-native-tags": "^2.2.1"
